--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../OtterSurvivor.x86_64"
+export_path="../Linux/OtterSurvivor.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../OtterSurvivor.exe"
+export_path="../Windows/OtterSurvivor.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -79,7 +79,7 @@ application/file_version=""
 application/product_version=""
 application/company_name="darknet-online.com"
 application/product_name="Otter Survivor"
-application/file_description="A game, where you play a little otter, saving his feesh."
+application/file_description="A game, where you play a little otter, saving its feesh."
 application/copyright="GPL3"
 application/trademarks=""
 application/export_angle=0
@@ -114,7 +114,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../OtterSurvivor.zip"
+export_path="../MacOS/OtterSurvivor.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -130,7 +130,7 @@ custom_template/release=""
 debug/export_console_wrapper=0
 application/icon=""
 application/icon_interpolation=4
-application/bundle_identifier=""
+application/bundle_identifier="com.darknet-online.ottersurvivor"
 application/signature=""
 application/app_category="Games"
 application/short_version=""
@@ -352,3 +352,45 @@ open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+
+[preset.3]
+
+name="Web"
+platform="Web"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../WebApp/index.html"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+variant/thread_support=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=true
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color(0, 0, 0, 1)
